[gd_scene load_steps=6 format=3 uid="uid://ddxtkmtkcinse"]

[ext_resource type="Script" path="res://HUD/node_2dWayDecision.gd" id="1_6e7hh"]
[ext_resource type="Script" path="res://HUD/Panel.gd" id="1_fddt7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4yfg"]
bg_color = Color(0.682353, 0.8, 0.901961, 1)

[sub_resource type="Animation" id="Animation_2mnru"]
resource_name = "popUpStart"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d273h"]
_data = {
"popUpStart": SubResource("Animation_2mnru")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6e7hh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -427.0
offset_top = -213.5
offset_right = 427.0
offset_bottom = 213.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(336, 166)
script = ExtResource("1_fddt7")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 280.167
offset_top = 53.5
offset_right = 561.167
offset_bottom = 106.5
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Select your way!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonLeft" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = -78.068
offset_top = -284.309
offset_right = 81.932
offset_bottom = -231.309
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_d4yfg")
action_mode = 0
text = "<--"

[node name="ButtonForward" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = 27.932
offset_top = -178.309
offset_right = 240.932
offset_bottom = -125.309
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_d4yfg")
action_mode = 0
text = "forward"

[node name="ButtonRight" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 1.167
anchor_right = 0.342
anchor_bottom = 1.167
offset_left = 187.932
offset_top = -284.309
offset_right = 347.932
offset_bottom = -231.309
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_d4yfg")
action_mode = 0
text = "-->"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
"": SubResource("AnimationLibrary_d273h")
}

[connection signal="pressed" from="Panel/ButtonLeft" to="Panel" method="_on_button_left_pressed"]
[connection signal="pressed" from="Panel/ButtonForward" to="Panel" method="_on_button_forward_pressed"]
[connection signal="pressed" from="Panel/ButtonRight" to="Panel" method="_on_button_right_pressed"]
